# remote_image_viewer

./: .coverage  .coveragerc  .gitignore  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  __init__.py  export_visualization.py  main.py  mypy.ini  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml  publish.yml
my_project.egg-info/: requires.txt
src/telepic/: __init__.py  config.py  constants.py  main.py  network.py  utils.py  web.py
src/telepic/templates/: index.html
templates/: index.html
tests/: test_image_viewer.py  test_utils.py
