# --- Approach 1: Using PEP 621 with setuptools ---

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "my-project"
version = "0.1.0"
dependencies = [
  "flask==2.0.1",
  "Werkzeug==2.0.3",
  "pyngrok==7.2.3",
  "Pillow==9.0.0",
  "python-dotenv==0.19.0",
  "pytest==7.0.0",
  "black==22.3.0",
  "flake8==4.0.1",
  "fire==0.5.0"
]
